--- a/package.json
+++ b/package.json
@@ -9,20 +9,24 @@
     "dev": "nodemon server.js",
     "dev:frontend": "cd frontend && npm run dev"
   },
-  "keywords": ["calculadora", "reajuste", "precos"],
+  "keywords": [
+    "calculadora",
+    "reajuste",
+    "precos"
+  ],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2",
-    "cors": "^2.8.5",
-    "pg": "^8.11.3",
-    "body-parser": "^1.20.2",
-    "dotenv": "^16.3.1",
     "bcrypt": "^5.1.1",
-    "jsonwebtoken": "^9.0.2"
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
+    "nodemailer": "^7.0.10",
+    "pg": "^8.11.3"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
   }
 }
-
