--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "nodemailer": "^7.0.10",
-    "pg": "^8.11.3"
+    "pg": "^8.11.3",
+    "stripe": "^20.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
