varios arquivos explicativos criado

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,56 @@
-# Configuração do PostgreSQL
-# Copie este arquivo para .env e preencha com suas credenciais reais
-
+# ============================================
+# CONFIGURAÇÃO DO BANCO DE DADOS POSTGRESQL
+# ============================================
 DB_HOST=localhost
 DB_PORT=5432
 DB_NAME=calculadora_reajuste
 DB_USER=postgres
-DB_PASSWORD=sua_senha_aqui
+DB_PASSWORD=sua_senha_postgres_aqui
+
+# ============================================
+# CONFIGURAÇÃO DO SERVIDOR
+# ============================================
+PORT=3001
+NODE_ENV=production
+FRONTEND_URL=https://seu-dominio.com
+
+# ============================================
+# CONFIGURAÇÃO JWT (AUTENTICAÇÃO)
+# ============================================
+JWT_SECRET=chave_super_secreta_aleatoria_aqui_use_openssl_rand_hex_32
+JWT_EXPIRES_IN=7d
+
+# ============================================
+# CONFIGURAÇÃO SMTP (EMAIL)
+# ============================================
+# Para produção, use SendGrid ou AWS SES
+# Veja CONFIGURAR_SMTP.md para mais detalhes
+
+# Opção 1: SendGrid (RECOMENDADO)
+SMTP_HOST=smtp.sendgrid.net
+SMTP_PORT=587
+SMTP_SECURE=false
+SMTP_USER=apikey
+SMTP_PASS=SG.sua_api_key_sendgrid_aqui
+SMTP_FROM=noreply@seu-dominio.com
+BASE_URL=https://seu-dominio.com
+
+# Opção 2: Gmail (apenas para testes)
+# SMTP_HOST=smtp.gmail.com
+# SMTP_PORT=587
+# SMTP_SECURE=false
+# SMTP_USER=seu-email@gmail.com
+# SMTP_PASS=sua-senha-de-app-gerada
+# SMTP_FROM=seu-email@gmail.com
+# BASE_URL=https://seu-dominio.com
+
+# ============================================
+# CONFIGURAÇÃO STRIPE (PAGAMENTOS)
+# ============================================
+# IMPORTANTE: Use chaves de PRODUÇÃO em produção
+# Use chaves de TESTE apenas em desenvolvimento
+
+STRIPE_SECRET_KEY=sk_live_sua_chave_secreta_stripe_aqui
+STRIPE_PLANO_ANUAL_PRICE_ID=price_sua_price_id_anual_aqui
+STRIPE_PLANO_UNICO_PRICE_ID=price_sua_price_id_unico_aqui
+STRIPE_WEBHOOK_SECRET=whsec_seu_webhook_secret_aqui
